# ESPNexUpload

./: CMakeLists.txt  README.md  library.json  library.properties
examples/Arduino_example/: CMakeLists.txt  platformio.ini
examples/Arduino_example/lib/ESPNexUpload/: ESPNexUpload.cpp  ESPNexUpload.h  ESPNexUploadWrapper.cpp
examples/Arduino_example/src/: binaries.c  main.cpp  main.h
examples/ESPIDF_example/: CMakeLists.txt  Makefile  README.md  sdkconfig
examples/ESPIDF_example/main/: CMakeLists.txt  upload.c  upload.h
src/: ESPNexUploadWrapper.h
